--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^9.27.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.99.8",
     "webpack-cli": "^6.0.1",
@@ -22,6 +23,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --open --config webpack.dev.js",
-    "lint": "eslint --fix src/"
+    "lint": "eslint --fix src/",
+    "test": "jest"
   }
 }
