--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "keywords": [],
   "main": "index.js",
   "devDependencies": {
+    "@babel/core": "^7.27.3",
+    "@babel/preset-env": "^7.27.2",
     "@eslint/js": "^9.27.0",
+    "babel-jest": "^30.0.0-beta.3",
     "css-loader": "^7.1.2",
     "eslint": "^9.27.0",
     "html-loader": "^5.1.0",
